# venhaparaleds-ia

./: README.md  requirements.txt
escritor/: .gitignore  README.md  post_final.md  pyproject.toml  report.md
escritor/src/escritor/: crew.py  main.py
escritor/src/escritor/config/: agents.yaml  tasks.yaml
escritor/src/escritor/tools/: custom_tool.py
