[project]
name = "escritor"
version = "0.1.0"
description = "escritor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
escritor = "escritor.main:run"
run_crew = "escritor.main:run"
train = "escritor.main:train"
replay = "escritor.main:replay"
test = "escritor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
